--- a/docker/base-images/golang:1.9.2-stretch/Dockerfile
+++ b/docker/base-images/golang:1.9.2-stretch/Dockerfile
@@ -2,16 +2,10 @@ FROM golang:1.9.2-stretch
 
 ENV GOMETALINTER_VERSION="0960299513738ff031fe418b3fcd4f6badc1a095"
 
+COPY scripts/install-dependencies.sh /usr/bin
+
 RUN set -eux; \
-	go get github.com/golang/dep/cmd/dep; \
-	\
-	git clone https://github.com/alecthomas/gometalinter.git ${GOPATH}/src/github.com/alecthomas/gometalinter; \
-	cd ${GOPATH}/src/github.com/alecthomas/gometalinter; \
-	git reset --hard ${GOMETALINTER_VERSION}; \
-	cd ${GOPATH}; \
-	go install github.com/alecthomas/gometalinter; \
-	gometalinter --debug --install; \
-	\
+	install-dependencies.sh; \
 	rm -rf \
 		${GOPATH}/src/* \
 		${GOPATH}/pkg/*; \
