--- a/docker/base-images/docker-compose.yml
+++ b/docker/base-images/docker-compose.yml
@@ -8,7 +8,11 @@ services:
       context: ../..
   postgres-client:
     image: warp-pipe/postgres-client:9.5-stretch-slim
-    build: postgres-client:9.5-stretch-slim
+    build:
+      dockerfile: docker/base-images/postgres-client:9.5-stretch-slim/Dockerfile
+      context: ../..
   postgres-server:
     image: warp-pipe/postgres-server:9.5.6
-    build: postgres-server:9.5.6
+    build:
+      dockerfile: docker/base-images/postgres-server:9.5.6/Dockerfile
+      context: ../..
