--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/Shopify/sarama"
   version = "1.14.0"
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.0"
