--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,12 @@
 [[constraint]]
   name = "github.com/pkg/errors"
   version = "0.8.0"
+
+[[constraint]]
+  name = "github.com/docker/docker"
+  version = "=17.5.0-ce"
+
+# https://github.com/moby/moby/blob/v17.05.0-ce/vendor.conf#L48
+[[override]]
+  name = "github.com/docker/distribution"
+  revision = "b38e5838b7b2f2ad48e06ec4b500011976080621"
