--- a/docker/images/docker-compose.yml
+++ b/docker/images/docker-compose.yml
@@ -4,26 +4,26 @@ services:
   golang:
     image: warp-pipe/golang:1.9.2-stretch
     build:
-      dockerfile: docker/base-images/golang:1.9.2-stretch/Dockerfile
+      dockerfile: docker/images/golang:1.9.2-stretch/Dockerfile
       context: ../..
   postgres-client:
     image: warp-pipe/postgres-client:9.5-stretch-slim
     build:
-      dockerfile: docker/base-images/postgres-client:9.5-stretch-slim/Dockerfile
+      dockerfile: docker/images/postgres-client:9.5-stretch-slim/Dockerfile
       context: ../..
   postgres-server:
     image: warp-pipe/postgres-server:9.5.6
     build:
-      dockerfile: docker/base-images/postgres-server:9.5.6/Dockerfile
+      dockerfile: docker/images/postgres-server:9.5.6/Dockerfile
       context: ../..
   zookeeper:
     image: warp-pipe/cp-zookeeper:3.3.1
     build:
-      dockerfile: docker/base-images/cp-zookeeper:3.3.1/Dockerfile
+      dockerfile: docker/images/cp-zookeeper:3.3.1/Dockerfile
       context: ../..
   kafka:
     image: warp-pipe/cp-kafka:3.3.1
     build:
-      dockerfile: docker/base-images/cp-kafka:3.3.1/Dockerfile
+      dockerfile: docker/images/cp-kafka:3.3.1/Dockerfile
       context: ../..
 
