--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -49,3 +49,7 @@
 [[constraint]]
   name = "github.com/jackc/pgx"
   version = "3.0.1"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/looplab/fsm"
