dep: Add go.uber.org/zap library

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -57,3 +57,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/jmoiron/sqlx"
+
+[[constraint]]
+  name = "go.uber.org/zap"
+  version = "1.7.1"
