dep: Add spf13/viper library

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -61,3 +61,7 @@
 [[constraint]]
   name = "go.uber.org/zap"
   version = "1.7.1"
+
+[[constraint]]
+  name = "github.com/spf13/viper"
+  version = "1.0.0"
